Fixed typos in container commands

--- a/.ebextensions/02_django.config
+++ b/.ebextensions/02_django.config
@@ -1,7 +1,7 @@
 container_commands:
   01_migrate:
-    command: "source /opt/python/run/venv/bin/actiate && python app/manage.py makemigrations"
-    command: "source /opt/python/run/venv/bin/activate && python app/manage.py migrate --noinput"
+    command: "source /opt/python/run/venv/bin/activate && python lpb/manage.py makemigrations"
+    command: "source /opt/python/run/venv/bin/activate && python lpb/manage.py migrate --noinput"
   02_collectstatic:
     command: "source /opt/python/run/venv/bin/activate && python lpb/manage.py collectstatic --noinput"
 
