--- a/.ebextensions/02_django.config
+++ b/.ebextensions/02_django.config
@@ -1,9 +1,9 @@
 container_commands:
   01_migrate:
-    command: "source /opt/python/run/venv/bin/activate && python lpb/manage.py makemigrations"
-    command: "source /opt/python/run/venv/bin/activate && python lpb/manage.py migrate --noinput"
+    command: "source /opt/python/run/venv/bin/activate && python manage.py makemigrations"
+    command: "source /opt/python/run/venv/bin/activate && python manage.py migrate --noinput"
   02_collectstatic:
-    command: "source /opt/python/run/venv/bin/activate && python lpb/manage.py collectstatic --noinput"
+    command: "source /opt/python/run/venv/bin/activate && python manage.py collectstatic --noinput"
 
 option_settings:
   "aws:elasticbeanstalk:application:environment":
