--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+awscli==1.14.32
 awsebcli==3.12.1
 Babel==2.5.3
 blessed==1.14.2
@@ -8,8 +9,10 @@ Django==2.0.1
 django-classy-tags==0.8.0
 django-compat==1.0.15
 django-countries==5.0
+django-favicon-plus==0.0.7
 django-fontawesome==0.3.1
 django-phonenumber-field==2.0.0
+django-storages==1.6.5
 django-taggit==0.22.2
 django-taggit-templatetags2==1.6.1
 docker-py==1.7.2
@@ -21,10 +24,13 @@ pathspec==0.5.0
 phonenumberslite==8.8.10
 Pillow==5.0.0
 psycopg2==2.7.3.2
+pyasn1==0.4.2
 python-dateutil==2.6.1
 pytz==2017.3
 PyYAML==3.12
 requests==2.9.1
+rsa==3.4.2
+s3transfer==0.1.12
 semantic-version==2.5.0
 six==1.11.0
 tabulate==0.7.5
