--- a/.ebextensions/02_django.config
+++ b/.ebextensions/02_django.config
@@ -1,4 +1,16 @@
 container_commands:
   01_migrate:
-    command: "source /opt/python/run/venv/bin/activate && python manage.py makemigrations"
-    command: "source /opt/python/run/venv/bin/activate && python manage.py migrate --noinput"
+    command: "source /opt/python/run/venv/bin/activate && python lpb/manage.py makemigrations"
+    command: "source /opt/python/run/venv/bin/activate && python lpb/manage.py migrate --noinput"
+    leader_only: true
+
+option_settings:
+  "aws:elasticbeanstalk:application:environment":
+    DJANGO_SETTINGS_MODULE: "lpb.settings"
+    "PYTHONPATH": "/opt/python/current/app/lpb:$PYTHONPATH"
+  "aws:elasticbeanstalk:container:python":
+    WSGIPath: lpb/lpb/wsgi.py
+    NumProcesses: 3
+    NumThreads: 20
+  "aws:elasticbeanstalk:container:python:staticfiles":
+    "/static/": "www/static/"
