--- a/.ebextensions/02_django.config
+++ b/.ebextensions/02_django.config
@@ -1,7 +1,6 @@
 container_commands:
   01_migrate:
-    command: "source /opt/python/run/venv/bin/activate && python manage.py makemigrations"
-    command: "source /opt/python/run/venv/bin/activate && python manage.py migrate --noinput"
+    command: "django-admin.py migrate --noinput"
     leader_only: true
 
 option_settings:
