--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,13 @@ botocore==1.8.36
 cement==2.8.2
 colorama==0.3.7
 Django==2.0.1
+django-ckeditor==5.4.0
 django-classy-tags==0.8.0
 django-compat==1.0.15
 django-countries==5.0
 django-favicon-plus==0.0.7
 django-fontawesome==0.3.1
+django-js-asset==1.0.0
 django-phonenumber-field==2.0.0
 django-storages==1.6.5
 django-taggit==0.22.2
